@@ -75,15 +75,16 @@ public class RangeByIsCountStrategyTest {
                 {__.map(__.count().is(0)), __.map(__.limit(1).count().is(0))},
                 {__.flatMap(__.count().is(0)), __.flatMap(__.limit(1).count().is(0))},
                 {__.flatMap(__.count().is(0)).as("a"), __.flatMap(__.count().is(0)).as("a")},
-                {__.filter(__.count().is(0)).as("a"), __.filter(__.not(__.identity())).as("a")},
-                {__.filter(__.count().is(0)), __.filter(__.not(__.identity()))},
+                {__.filter(__.count().is(0)).as("a"), __.not(__.identity()).as("a")},
+                {__.filter(__.count().is(0)), __.not(__.identity())},
                 {__.sideEffect(__.count().is(0)), __.sideEffect(__.not(__.identity()))},
                 {__.branch(__.count().is(0)), __.branch(__.limit(1).count().is(0))},
                 {__.count().is(0).store("x"), __.limit(1).count().is(0).store("x")},
                 {__.repeat(__.out()).until(__.outE().count().is(0)), __.repeat(__.out()).until(__.not(__.outE()))},
                 {__.repeat(__.out()).emit(__.outE().count().is(0)), __.repeat(__.out()).emit(__.not(__.outE()))},
-                {__.where(__.outE().hasLabel("created").count().is(0)), __.where(__.not(__.outE().hasLabel("created")))},
-                {__.where(__.out().outE().hasLabel("created").count().is(0)), __.where(__.out().not(__.outE().hasLabel("created")))},
+                {__.where(__.outE().hasLabel("created").count().is(0)), __.not(__.outE().hasLabel("created"))},
+                {__.where(__.out().outE().hasLabel("created").count().is(0)), __.not(__.out().outE().hasLabel("created"))},
+                {__.where(__.out().outE().hasLabel("created").count().is(0).store("x")), __.where(__.out().outE().hasLabel("created").limit(1).count().is(0).store("x"))},
                 {__.filter(__.bothE().count().is(gt(0))), __.filter(__.bothE())},
                 {__.filter(__.bothE().count().is(gte(1))), __.filter(__.bothE())},
                 {__.filter(__.bothE().count().is(gt(1))), __.filter(__.bothE().limit(2).count().is(gt(1)))},
